--- a/templates/systemd/telegraf.service.j2
+++ b/templates/systemd/telegraf.service.j2
@@ -20,7 +20,7 @@ ExecStartPre={{ devture_systemd_docker_base_host_command_docker }} create \
                 --read-only \
                 --network={{ telegraf_container_network }} \
                 --env-file={{ telegraf_env_path }} \
-                {{ telegraf_container_image }} -- config {{ telegraf_config_link }}
+                {{ telegraf_container_image }} --config {{ telegraf_config_link }} {% if telegraf_debug %} --debug {%endif%}
 
 {% for network in telegraf_container_additional_networks %}
 ExecStartPre={{ devture_systemd_docker_base_host_command_docker }} network connect {{ network }} {{ telegraf_identifier }}
