--- a/templates/env.j2
+++ b/templates/env.j2
@@ -1,3 +1,9 @@
+{#
+SPDX-FileCopyrightText: 2023 Julian-Samuel Gebühr
+
+SPDX-License-Identifier: AGPL-3.0-or-later
+#}
+
 INFLUX_TOKEN={{ telegraf_influx_token }}
 
 {{ telegraf_environment_variables_extension }}
