--- a/templates/systemd/telegraf.service.j2
+++ b/templates/systemd/telegraf.service.j2
@@ -1,3 +1,9 @@
+{#
+SPDX-FileCopyrightText: 2023 Julian-Samuel Gebühr
+
+SPDX-License-Identifier: AGPL-3.0-or-later
+#}
+
 [Unit]
 Description=telegraf time-series database ({{ telegraf_identifier }})
 {% for service in telegraf_systemd_required_services_list %}
