Fix capitalization: telegraf → Telegraf
Signed-off-by: Suguru Hirahara <acioustick@noreply.codeberg.org>

--- a/templates/systemd/telegraf.service.j2
+++ b/templates/systemd/telegraf.service.j2
@@ -5,7 +5,7 @@ SPDX-License-Identifier: AGPL-3.0-or-later
 #}
 
 [Unit]
-Description=telegraf time-series database ({{ telegraf_identifier }})
+Description=Telegraf time-series database ({{ telegraf_identifier }})
 {% for service in telegraf_systemd_required_services_list %}
 Requires={{ service }}
 After={{ service }}
