--- a/templates/systemd/telegraf.service.j2
+++ b/templates/systemd/telegraf.service.j2
@@ -13,6 +13,9 @@ Description=Telegraf time-series database ({{ telegraf_identifier }})
 Requires={{ service }}
 After={{ service }}
 {% endfor %}
+{% for service in telegraf_systemd_wanted_services_list %}
+Wants={{ service }}
+{% endfor %}
 DefaultDependencies=no
 
 [Service]
