--- a/templates/env.j2
+++ b/templates/env.j2
@@ -4,6 +4,8 @@ SPDX-FileCopyrightText: 2023 Julian-Samuel Gebühr
 SPDX-License-Identifier: AGPL-3.0-or-later
 #}
 
+TZ={{ telegraf_environment_variables_tz }}
+
 INFLUX_TOKEN={{ telegraf_influx_token }}
 
 {{ telegraf_environment_variables_additional_variables }}
