--- a/templates/systemd/telegraf.service.j2
+++ b/templates/systemd/telegraf.service.j2
@@ -32,6 +32,9 @@ ExecStartPre={{ devture_systemd_docker_base_host_command_docker }} create \
       --read-only \
       --network={{ telegraf_container_network }} \
       --env-file={{ telegraf_base_path }}/env \
+      {% for arg in telegraf_container_extra_arguments %}
+      {{ arg }} \
+      {% endfor %}
       {{ telegraf_container_image }} --config {{ telegraf_config_link }} {% if telegraf_debug %} --debug {%endif%}
 
 {% for network in telegraf_container_additional_networks %}
